# IBM-WatsonxConnector

./: .gitignore  BACKUP_setup.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
Documentation/: connector_documentation.md  extended_reading.md
WatsonxConnector/: connector.py
examples/: example_connector.py
sandbox/: sandbox.py
src/: main.py
src/WatsonxConnector/: WatsonxConnector.py  __init__.py  connector.py
src/WatsonxConnector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: class_ref_testing.py
trash/: old-connector-main.py
